--- a/upstream-community-operators/vault1/vault1.package.yml
+++ b/upstream-community-operators/vault1/vault1.package.yml
@@ -1,5 +1,5 @@
 #! package-manifest: deploy/chart/catalog_resources/rh-operators/vaultoperator.v0.4.10.clusterserviceversion.yaml
-packageName: vault
+packageName: vault1
 channels:
 - name: beta
   currentCSV: vaultoperator.v0.4.10
